Baby_DuckParser.py
# Generated from Baby_Duck.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


from MyFunctions import *
    

class Baby_DuckParser ( Parser ):

    grammarFileName = "Baby_Duck.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'float'", "'int'", "'var'", "'main'", "'void'", "'program'", 
                     "'while'", "'do'", "'if'", "'else'", "'print'", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "'*'", "'/'", "'='", 
                     "'+'", "'-'", "'>'", "'<'", "'!='", "'.'", "','", "';'", 
                     "':'" ]

    symbolicNames = [ "<INVALID>", "TYPE_CONDITIONAL", "TYPE", "CTE", "FLOAT", 
                      "INT", "VAR", "MAIN", "VOID", "PROGRAM", "WHILE", 
                      "DO", "IF", "ELSE", "PRINT_WORD", "OPEN_PAREN", "CLOSE_PAREN", 
                      "OPEN_KEY", "CLOSE_KEY", "OPEN_BRACKET", "CLOSE_BRACKET", 
                      "MULT", "DIV", "EQUAL", "ADD", "SUB", "GREATER", "LESS", 
                      "DIFFERENT", "DOT", "COMMA", "SEMICOLON", "COLON", 
                      "ID", "LETTER", "DECIMAL", "NUMBER", "STRING", "WS" ]

    RULE_programa = 0
    RULE_body_end = 1
    RULE_statement = 2
    RULE_assign = 3
    RULE_vars = 4
    RULE_vars_func = 5
    RULE_funcs = 6
    RULE_f_call = 7
    RULE_print_ = 8
    RULE_condition = 9
    RULE_cycle = 10
    RULE_body = 11
    RULE_factor = 12
    RULE_termino = 13
    RULE_exp = 14
    RULE_expresion = 15

    ruleNames =  [ "programa", "body_end", "statement", "assign", "vars", 
                   "vars_func", "funcs", "f_call", "print_", "condition", 
                   "cycle", "body", "factor", "termino", "exp", "expresion" ]

    EOF = Token.EOF
    TYPE_CONDITIONAL=1
    TYPE=2
    CTE=3
    FLOAT=4
    INT=5
    VAR=6
    MAIN=7
    VOID=8
    PROGRAM=9
    WHILE=10
    DO=11
    IF=12
    ELSE=13
    PRINT_WORD=14
    OPEN_PAREN=15
    CLOSE_PAREN=16
    OPEN_KEY=17
    CLOSE_KEY=18
    OPEN_BRACKET=19
    CLOSE_BRACKET=20
    MULT=21
    DIV=22
    EQUAL=23
    ADD=24
    SUB=25
    GREATER=26
    LESS=27
    DIFFERENT=28
    DOT=29
    COMMA=30
    SEMICOLON=31
    COLON=32
    ID=33
    LETTER=34
    DECIMAL=35
    NUMBER=36
    STRING=37
    WS=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(Baby_DuckParser.PROGRAM, 0)

        def ID(self):
            return self.getToken(Baby_DuckParser.ID, 0)

        def SEMICOLON(self):
            return self.getToken(Baby_DuckParser.SEMICOLON, 0)

        def MAIN(self):
            return self.getToken(Baby_DuckParser.MAIN, 0)

        def body_end(self):
            return self.getTypedRuleContext(Baby_DuckParser.Body_endContext,0)


        def vars_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Baby_DuckParser.VarsContext)
            else:
                return self.getTypedRuleContext(Baby_DuckParser.VarsContext,i)


        def funcs(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Baby_DuckParser.FuncsContext)
            else:
                return self.getTypedRuleContext(Baby_DuckParser.FuncsContext,i)


        def getRuleIndex(self):
            return Baby_DuckParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = Baby_DuckParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            functionGoto()
            self.state = 33
            self.match(Baby_DuckParser.PROGRAM)
            setScope("global")
            self.state = 35
            self.match(Baby_DuckParser.ID)
            self.state = 36
            self.match(Baby_DuckParser.SEMICOLON)
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 37
                self.vars_()
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2 or _la==8:
                self.state = 43
                self.funcs()
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 49
            self.match(Baby_DuckParser.MAIN)
            pJumpF()
            self.state = 51
            self.body_end()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Body_endContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_KEY(self):
            return self.getToken(Baby_DuckParser.OPEN_KEY, 0)

        def CLOSE_KEY(self):
            return self.getToken(Baby_DuckParser.CLOSE_KEY, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Baby_DuckParser.StatementContext)
            else:
                return self.getTypedRuleContext(Baby_DuckParser.StatementContext,i)


        def getRuleIndex(self):
            return Baby_DuckParser.RULE_body_end

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody_end" ):
                listener.enterBody_end(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody_end" ):
                listener.exitBody_end(self)




    def body_end(self):

        localctx = Baby_DuckParser.Body_endContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_body_end)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(Baby_DuckParser.OPEN_KEY)
            addKey()
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8589956096) != 0):
                self.state = 55
                self.statement()
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 61
            self.match(Baby_DuckParser.CLOSE_KEY)
            closeKey()
            solveQuadruples()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(Baby_DuckParser.AssignContext,0)


        def condition(self):
            return self.getTypedRuleContext(Baby_DuckParser.ConditionContext,0)


        def cycle(self):
            return self.getTypedRuleContext(Baby_DuckParser.CycleContext,0)


        def f_call(self):
            return self.getTypedRuleContext(Baby_DuckParser.F_callContext,0)


        def print_(self):
            return self.getTypedRuleContext(Baby_DuckParser.Print_Context,0)


        def getRuleIndex(self):
            return Baby_DuckParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = Baby_DuckParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.assign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.condition()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 67
                self.cycle()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 68
                self.f_call()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 69
                self.print_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._ID = None # Token

        def ID(self):
            return self.getToken(Baby_DuckParser.ID, 0)

        def EQUAL(self):
            return self.getToken(Baby_DuckParser.EQUAL, 0)

        def expresion(self):
            return self.getTypedRuleContext(Baby_DuckParser.ExpresionContext,0)


        def SEMICOLON(self):
            return self.getToken(Baby_DuckParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return Baby_DuckParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)




    def assign(self):

        localctx = Baby_DuckParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            localctx._ID = self.match(Baby_DuckParser.ID)
            self.state = 73
            self.match(Baby_DuckParser.EQUAL)
            self.state = 74
            self.expresion()
            assignExpression((None if localctx._ID is None else localctx._ID.text))
            self.state = 76
            self.match(Baby_DuckParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._ID = None # Token
            self._TYPE = None # Token

        def VAR(self):
            return self.getToken(Baby_DuckParser.VAR, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(Baby_DuckParser.ID)
            else:
                return self.getToken(Baby_DuckParser.ID, i)

        def COLON(self):
            return self.getToken(Baby_DuckParser.COLON, 0)

        def TYPE(self):
            return self.getToken(Baby_DuckParser.TYPE, 0)

        def SEMICOLON(self):
            return self.getToken(Baby_DuckParser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(Baby_DuckParser.COMMA)
            else:
                return self.getToken(Baby_DuckParser.COMMA, i)

        def getRuleIndex(self):
            return Baby_DuckParser.RULE_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars" ):
                listener.enterVars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars" ):
                listener.exitVars(self)




    def vars_(self):

        localctx = Baby_DuckParser.VarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vars)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(Baby_DuckParser.VAR)
            self.state = 79
            localctx._ID = self.match(Baby_DuckParser.ID)
            saveVariable((None if localctx._ID is None else localctx._ID.text))
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30:
                self.state = 81
                self.match(Baby_DuckParser.COMMA)
                self.state = 82
                localctx._ID = self.match(Baby_DuckParser.ID)
                saveVariable((None if localctx._ID is None else localctx._ID.text))
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 89
            self.match(Baby_DuckParser.COLON)
            self.state = 90
            localctx._TYPE = self.match(Baby_DuckParser.TYPE)
            saveType((None if localctx._TYPE is None else localctx._TYPE.text))
            self.state = 92
            self.match(Baby_DuckParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vars_funcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._ID = None # Token
            self._TYPE = None # Token

        def VAR(self):
            return self.getToken(Baby_DuckParser.VAR, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(Baby_DuckParser.ID)
            else:
                return self.getToken(Baby_DuckParser.ID, i)

        def COLON(self):
            return self.getToken(Baby_DuckParser.COLON, 0)

        def TYPE(self):
            return self.getToken(Baby_DuckParser.TYPE, 0)

        def SEMICOLON(self):
            return self.getToken(Baby_DuckParser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(Baby_DuckParser.COMMA)
            else:
                return self.getToken(Baby_DuckParser.COMMA, i)

        def getRuleIndex(self):
            return Baby_DuckParser.RULE_vars_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars_func" ):
                listener.enterVars_func(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars_func" ):
                listener.exitVars_func(self)




    def vars_func(self):

        localctx = Baby_DuckParser.Vars_funcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vars_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(Baby_DuckParser.VAR)
            self.state = 95
            localctx._ID = self.match(Baby_DuckParser.ID)
            saveVariableLocal((None if localctx._ID is None else localctx._ID.text))
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30:
                self.state = 97
                self.match(Baby_DuckParser.COMMA)
                self.state = 98
                localctx._ID = self.match(Baby_DuckParser.ID)
                saveVariableLocal((None if localctx._ID is None else localctx._ID.text))
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 105
            self.match(Baby_DuckParser.COLON)
            self.state = 106
            localctx._TYPE = self.match(Baby_DuckParser.TYPE)
            saveTypeLocal((None if localctx._TYPE is None else localctx._TYPE.text))
            insertVariablesLocales()
            insertQuadCount()
            self.state = 110
            self.match(Baby_DuckParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._TYPE = None # Token
            self._ID = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(Baby_DuckParser.ID)
            else:
                return self.getToken(Baby_DuckParser.ID, i)

        def OPEN_PAREN(self):
            return self.getToken(Baby_DuckParser.OPEN_PAREN, 0)

        def CLOSE_PAREN(self):
            return self.getToken(Baby_DuckParser.CLOSE_PAREN, 0)

        def OPEN_BRACKET(self):
            return self.getToken(Baby_DuckParser.OPEN_BRACKET, 0)

        def body(self):
            return self.getTypedRuleContext(Baby_DuckParser.BodyContext,0)


        def CLOSE_BRACKET(self):
            return self.getToken(Baby_DuckParser.CLOSE_BRACKET, 0)

        def SEMICOLON(self):
            return self.getToken(Baby_DuckParser.SEMICOLON, 0)

        def VOID(self):
            return self.getToken(Baby_DuckParser.VOID, 0)

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(Baby_DuckParser.TYPE)
            else:
                return self.getToken(Baby_DuckParser.TYPE, i)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(Baby_DuckParser.COLON)
            else:
                return self.getToken(Baby_DuckParser.COLON, i)

        def vars_func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Baby_DuckParser.Vars_funcContext)
            else:
                return self.getTypedRuleContext(Baby_DuckParser.Vars_funcContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(Baby_DuckParser.COMMA)
            else:
                return self.getToken(Baby_DuckParser.COMMA, i)

        def getRuleIndex(self):
            return Baby_DuckParser.RULE_funcs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncs" ):
                listener.enterFuncs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncs" ):
                listener.exitFuncs(self)




    def funcs(self):

        localctx = Baby_DuckParser.FuncsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            _la = self._input.LA(1)
            if not(_la==2 or _la==8):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 113
            localctx._ID = self.match(Baby_DuckParser.ID)
            saveFunction((None if localctx._ID is None else localctx._ID.text), (None if localctx._TYPE is None else localctx._TYPE.text))
            setScope((None if localctx._ID is None else localctx._ID.text))
            self.state = 116
            self.match(Baby_DuckParser.OPEN_PAREN)
            addParenthesis()
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==33:
                self.state = 118
                localctx._ID = self.match(Baby_DuckParser.ID)
                self.state = 119
                self.match(Baby_DuckParser.COLON)
                self.state = 120
                localctx._TYPE = self.match(Baby_DuckParser.TYPE)
                saveParameter((None if localctx._ID is None else localctx._ID.text), (None if localctx._TYPE is None else localctx._TYPE.text))
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==30:
                    self.state = 122
                    self.match(Baby_DuckParser.COMMA)
                    self.state = 123
                    localctx._ID = self.match(Baby_DuckParser.ID)
                    self.state = 124
                    self.match(Baby_DuckParser.COLON)
                    self.state = 125
                    localctx._TYPE = self.match(Baby_DuckParser.TYPE)
                    saveParameter((None if localctx._ID is None else localctx._ID.text), (None if localctx._TYPE is None else localctx._TYPE.text))
                    self.state = 131
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 134
            self.match(Baby_DuckParser.CLOSE_PAREN)
            closeParenthesis()
            insertParameters()
            self.state = 137
            self.match(Baby_DuckParser.OPEN_BRACKET)
            addBrackets()
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 139
                self.vars_func()
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 145
            self.body()
            self.state = 146
            self.match(Baby_DuckParser.CLOSE_BRACKET)
            closeBrackets()
            endScopeVars()
            setScope("global")
            self.state = 150
            self.match(Baby_DuckParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class F_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._ID = None # Token

        def ID(self):
            return self.getToken(Baby_DuckParser.ID, 0)

        def OPEN_PAREN(self):
            return self.getToken(Baby_DuckParser.OPEN_PAREN, 0)

        def CLOSE_PAREN(self):
            return self.getToken(Baby_DuckParser.CLOSE_PAREN, 0)

        def SEMICOLON(self):
            return self.getToken(Baby_DuckParser.SEMICOLON, 0)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Baby_DuckParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(Baby_DuckParser.ExpresionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(Baby_DuckParser.COMMA)
            else:
                return self.getToken(Baby_DuckParser.COMMA, i)

        def getRuleIndex(self):
            return Baby_DuckParser.RULE_f_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterF_call" ):
                listener.enterF_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitF_call" ):
                listener.exitF_call(self)




    def f_call(self):

        localctx = Baby_DuckParser.F_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_f_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            localctx._ID = self.match(Baby_DuckParser.ID)
            proveFunction((None if localctx._ID is None else localctx._ID.text))
            self.state = 154
            self.match(Baby_DuckParser.OPEN_PAREN)
            generateERA()
            addParenthesis()
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 8640299016) != 0):
                self.state = 157
                self.expresion()
                arguments()
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==30:
                    self.state = 159
                    self.match(Baby_DuckParser.COMMA)
                    addK()
                    self.state = 161
                    self.expresion()
                    arguments()
                    self.state = 168
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 171
            self.match(Baby_DuckParser.CLOSE_PAREN)
            closeParenthesis()
            isNull()
            self.state = 174
            self.match(Baby_DuckParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._STRING = None # Token

        def PRINT_WORD(self):
            return self.getToken(Baby_DuckParser.PRINT_WORD, 0)

        def OPEN_PAREN(self):
            return self.getToken(Baby_DuckParser.OPEN_PAREN, 0)

        def CLOSE_PAREN(self):
            return self.getToken(Baby_DuckParser.CLOSE_PAREN, 0)

        def SEMICOLON(self):
            return self.getToken(Baby_DuckParser.SEMICOLON, 0)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Baby_DuckParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(Baby_DuckParser.ExpresionContext,i)


        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(Baby_DuckParser.STRING)
            else:
                return self.getToken(Baby_DuckParser.STRING, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(Baby_DuckParser.COMMA)
            else:
                return self.getToken(Baby_DuckParser.COMMA, i)

        def getRuleIndex(self):
            return Baby_DuckParser.RULE_print_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint_" ):
                listener.enterPrint_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint_" ):
                listener.exitPrint_(self)




    def print_(self):

        localctx = Baby_DuckParser.Print_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_print_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.match(Baby_DuckParser.PRINT_WORD)
            self.state = 177
            self.match(Baby_DuckParser.OPEN_PAREN)
            addParenthesis()
            addPrint()
            self.state = 183
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 15, 24, 25, 33]:
                self.state = 180
                self.expresion()
                pass
            elif token in [37]:
                self.state = 181
                localctx._STRING = self.match(Baby_DuckParser.STRING)
                saveString((None if localctx._STRING is None else localctx._STRING.text))
                pass
            else:
                raise NoViableAltException(self)

            printExp()
            self.state = 196
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30:
                self.state = 186
                self.match(Baby_DuckParser.COMMA)
                addPrint()
                self.state = 191
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [3, 15, 24, 25, 33]:
                    self.state = 188
                    self.expresion()
                    pass
                elif token in [37]:
                    self.state = 189
                    localctx._STRING = self.match(Baby_DuckParser.STRING)
                    saveString((None if localctx._STRING is None else localctx._STRING.text))
                    pass
                else:
                    raise NoViableAltException(self)

                printExp()
                self.state = 198
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 199
            self.match(Baby_DuckParser.CLOSE_PAREN)
            closeParenthesis()
            self.state = 201
            self.match(Baby_DuckParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(Baby_DuckParser.IF, 0)

        def OPEN_PAREN(self):
            return self.getToken(Baby_DuckParser.OPEN_PAREN, 0)

        def expresion(self):
            return self.getTypedRuleContext(Baby_DuckParser.ExpresionContext,0)


        def CLOSE_PAREN(self):
            return self.getToken(Baby_DuckParser.CLOSE_PAREN, 0)

        def body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Baby_DuckParser.BodyContext)
            else:
                return self.getTypedRuleContext(Baby_DuckParser.BodyContext,i)


        def SEMICOLON(self):
            return self.getToken(Baby_DuckParser.SEMICOLON, 0)

        def ELSE(self):
            return self.getToken(Baby_DuckParser.ELSE, 0)

        def getRuleIndex(self):
            return Baby_DuckParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = Baby_DuckParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_condition)
        self._la = 0 # Token type
        try:
